# aioshenanigans

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-app.yml
src/aioshenanigans/: __init__.py  main.py
test/: test_main.py
